--- a/smos-query/smos-query.cabal
+++ b/smos-query/smos-query.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -55,6 +55,7 @@ library
     , containers
     , envparse
     , mtl
+    , ncurses
     , optparse-applicative
     , path
     , pretty-relative-time
