--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.7.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -154,12 +154,11 @@ library
     , text
     , time
     , tz
-    , unix
     , unliftio
     , validity
     , vty
     , vty-crossplatform
-    , vty-unix
+    , vty-windows
   default-language: Haskell2010
 
 executable smos
