Split out smos' e2e tests

--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -118,6 +118,7 @@ library
     , smos-client
     , smos-data
     , smos-directory
+    , smos-e2e
     , smos-report
     , smos-sync-client
     , smos-web-style
