--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -48,6 +48,7 @@ library:
   - smos-client
   - smos-data
   - smos-directory
+  - smos-e2e
   - smos-report
   - smos-sync-client
   - smos-web-style
