--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -98,6 +98,7 @@ library
     , tz
     , validity
     , vty
+    , vty-crossplatform
   default-language: Haskell2010
 
 executable smos
@@ -158,4 +159,5 @@ test-suite smos-test
     , sydtest
     , text
     , vty
+    , vty-crossplatformb
   default-language: Haskell2010
