--- a/stack.yaml
+++ b/stack.yaml
@@ -32,7 +32,7 @@ packages:
 - smos-github
 - smos-jobhunt
 
-- smos-stripe-client
+# - smos-stripe-client
 
 # These are duplicated in nix/overlay.
 ghc-options:
@@ -40,6 +40,12 @@ ghc-options:
   smos-stripe-client: -w # Turn off warnings for the generated code.
 
 extra-deps:
+- vty-6.2@sha256:3536dc83a3fee17d9a114baf58fe47b6f080c24987266f0cd0b7b4b1fcd9cf19,3520
+- brick-2.3.1
+- vty-crossplatform-0.4.0.0
+- terminfo-0.4.1.6@sha256:fb0e7f56eb6ab259c03057b18eeb373d7f9acad45b2167f4c1eb4e80f10459a0,1658
+- vty-windows-0.2.0.1@sha256:6c75230057a708168dbc420975572511ad3ec09956bf73c3b6f4be03324e8b13,2815
+
 - github: NorfairKing/servant
   commit: 552da96ff9a6d81a8553c6429843178d78356054
   subdirs:
