Fix that the booking page would sometimes crash

--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -145,6 +145,7 @@ test-suite smos-server-test
       sydtest-discover:sydtest-discover
   build-depends:
       QuickCheck
+    , async
     , base
     , bytestring
     , containers
