--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -104,6 +104,7 @@ library
     , path
     , path-io
     , persistent
+    , persistent-pagination
     , persistent-sqlite
     , pretty-show
     , retry
