further booking tests from the web server

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -94,11 +94,15 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - QuickCheck
+    - containers
     - genvalidity-sydtest
     - http-client
     - http-types
+    - mergeful
     - monad-logger
+    - mtl
     - servant-client
+    - smos-api
     - smos-client
     - smos-data-gen
     - smos-server-gen
@@ -107,4 +111,7 @@ tests:
     - sydtest
     - sydtest-yesod
     - text
+    - time
+    - tz
+    - yaml
     - yesod-auth
