--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -170,11 +170,15 @@ test-suite smos-web-server-test
   build-depends:
       QuickCheck
     , base
+    , containers
     , genvalidity-sydtest
     , http-client
     , http-types
+    , mergeful
     , monad-logger
+    , mtl
     , servant-client
+    , smos-api
     , smos-client
     , smos-data-gen
     , smos-server-gen
@@ -183,5 +187,8 @@ test-suite smos-web-server-test
     , sydtest
     , sydtest-yesod
     , text
+    , time
+    , tz
+    , yaml
     , yesod-auth
   default-language: Haskell2010
