--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -46,8 +46,10 @@ library:
   - smos-report-cursor
   - text
   - time
+  - typed-process
   - tz
   - validity
+  - vcard
   - vty
   - vty-crossplatform
 
