--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -55,6 +55,7 @@ extra-source-files:
     content/changelogs/2023-11-25.markdown
     content/changelogs/2024-02-13.markdown
     content/changelogs/2024-03-26.markdown
+    content/changelogs/2024-05-14.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
