trying to simplify casts

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -51,14 +51,12 @@ library:
   - smos-server
   - smos-single
   - smos-sync-client
+  - smos-web-assets
   - smos-web-server
-  - smos-web-style
   - template-haskell
   - template-haskell-reload
   - text
-  - th-lift-instances
   - time
-  - typed-process
   - wai-extra
   - warp
   - yaml
