--- a/smos-web-assets/smos-web-assets.cabal
+++ b/smos-web-assets/smos-web-assets.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           smos-web-style
+name:           smos-web-assets
 version:        0.0.2
 category:       Smos
 author:         Tom Sydney Kerckhove
@@ -16,11 +16,11 @@ extra-source-files:
 
 library
   exposed-modules:
-      Smos.Web.Style
-      Smos.Web.Style.Constants
-      Smos.Web.Style.TH
+      Smos.Web.Assets
+      Smos.Web.Assets.Constants
+      Smos.Web.Assets.TH
   other-modules:
-      Paths_smos_web_style
+      Paths_smos_web_assets
   hs-source-dirs:
       src/
   ghc-options: -Wall
@@ -30,7 +30,6 @@ library
       base
     , path
     , path-io
-    , process
     , template-haskell
     , yesod-static
   default-language: Haskell2010
