--- a/weeder.toml
+++ b/weeder.toml
@@ -26,7 +26,7 @@ roots = [
   "logo_svg",
   "mkCasts",
   "mkStatic",
-  "mkStyle",
+  "mkAssets",
   "smos_cheat_sheet_jpeg",
   "smos_cheat_sheet_pdf",
   "smos_png",
