--- a/smos-web-assets/package.yaml
+++ b/smos-web-assets/package.yaml
@@ -1,4 +1,4 @@
-name: smos-web-style
+name: smos-web-assets
 version: 0.0.2
 category: Smos
 author: Tom Sydney Kerckhove
@@ -16,9 +16,6 @@ library:
   ghc-options: -Wall
   build-tools: autoexporter
   dependencies:
-  - path
-  - path-io
-  - process
   - template-haskell
   - yesod-static
 
