opt-env-conf for smos-single

--- a/smos-single/package.yaml
+++ b/smos-single/package.yaml
@@ -10,8 +10,7 @@ library:
   ghc-options: -Wall
   dependencies:
     - base
-    - envparse
-    - optparse-applicative
+    - opt-env-conf
     - path
     - path-io
     - smos-cli
@@ -19,7 +18,6 @@ library:
     - smos-directory
     - text
     - time
-    - autodocodec
 
 executables:
   smos-single:
