--- a/smos-cli/smos-cli.cabal
+++ b/smos-cli/smos-cli.cabal
@@ -36,6 +36,7 @@ library
     , http-client
     , http-types
     , monad-logger
+    , opt-env-conf
     , optparse-applicative
     , password
     , path
