--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -30,10 +30,12 @@ library:
   - file-embed
   - filepath
   - fsnotify
+  - opt-env-conf
   - optparse-applicative
   - path
   - path-io
   - raw-strings-qq
+  - safe-coloured-text
   - semver
   - shakespeare
   - smos
