move smos-notify settings to OptParse

--- a/smos-notify/package.yaml
+++ b/smos-notify/package.yaml
@@ -23,6 +23,7 @@ library:
     - filepath
     - hashable
     - monad-logger
+    - opt-env-conf
     - optparse-applicative
     - path
     - path-io
