--- a/smos-notify/smos-notify.cabal
+++ b/smos-notify/smos-notify.cabal
@@ -35,6 +35,7 @@ library
     , filepath
     , hashable
     , monad-logger
+    , opt-env-conf
     , optparse-applicative
     , path
     , path-io
