--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -218,7 +218,6 @@ library
       Smos.Calendar.Import.Event
       Smos.Calendar.Import.Filter
       Smos.Calendar.Import.OptParse
-      Smos.Calendar.Import.OptParse.Types
       Smos.Calendar.Import.Pick
       Smos.Calendar.Import.Recur
       Smos.Calendar.Import.RecurringEvent
@@ -241,14 +240,13 @@ library
     , case-insensitive
     , conformance
     , containers
-    , envparse
     , http-client
     , http-client-tls
     , ical
     , ical-recurrence
     , monad-logger
     , network-uri
-    , optparse-applicative
+    , opt-env-conf
     , path
     , path-io
     , smos-cli
