opt-env-conf for smos-github

--- a/smos-github/package.yaml
+++ b/smos-github/package.yaml
@@ -18,14 +18,11 @@ library:
   dependencies:
     - aeson
     - async
-    - autodocodec
-    - bytestring
     - conduit
     - containers
-    - envparse
     - github
     - network-uri
-    - optparse-applicative
+    - opt-env-conf
     - path
     - path-io
     - safe-coloured-text
