--- a/smos-notify/smos-notify.cabal
+++ b/smos-notify/smos-notify.cabal
@@ -20,15 +20,13 @@ library
       Smos.Notify
       Smos.Notify.DB
       Smos.Notify.OptParse
-      Smos.Notify.OptParse.Types
   other-modules:
       Paths_smos_notify
   hs-source-dirs:
       src/
   ghc-options: -Wall
   build-depends:
-      autodocodec
-    , base
+      base
     , conduit
     , containers
     , filepath
