--- a/smos-scheduler/smos-scheduler.cabal
+++ b/smos-scheduler/smos-scheduler.cabal
@@ -23,7 +23,6 @@ library
       Smos.Scheduler.Commands.Sample
       Smos.Scheduler.Commands.Schedule
       Smos.Scheduler.OptParse
-      Smos.Scheduler.OptParse.Types
       Smos.Scheduler.Recurrence
       Smos.Scheduler.Render
       Smos.Scheduler.Template
@@ -44,11 +43,10 @@ library
     , containers
     , cron
     , cryptohash-sha256
-    , envparse
     , fuzzy-time
     , megaparsec
     , mtl
-    , optparse-applicative
+    , opt-env-conf
     , path
     , path-io
     , pretty-relative-time
