--- a/smos-jobhunt/smos-jobhunt.cabal
+++ b/smos-jobhunt/smos-jobhunt.cabal
@@ -38,6 +38,7 @@ library
     , monad-logger
     , network
     , opt-env-conf
+    , password
     , path
     , path-io
     , safe-coloured-text
