--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -17,6 +17,8 @@
 - ignore:
     name: "Use void"
 - ignore:
+    name: "Use :"
+- ignore:
     name: "Use const"
 - ignore:
     name: "Use map once"
