--- a/smos-cli/package.yaml
+++ b/smos-cli/package.yaml
@@ -21,13 +21,13 @@ library:
   - monad-logger
   - opt-env-conf
   - optparse-applicative
-  - password
   - path
   - path-io
   - pretty-show
   - retry
   - safe-coloured-text
   - safe-coloured-text-layout
+  - servant-client
   - smos-data
   - text
   - time
