--- a/smos-sync-client/smos-sync-client.cabal
+++ b/smos-sync-client/smos-sync-client.cabal
@@ -27,7 +27,6 @@ library
       Smos.Sync.Client.Meta
       Smos.Sync.Client.MetaMap
       Smos.Sync.Client.OptParse
-      Smos.Sync.Client.OptParse.Types
       Smos.Sync.Client.Session
   other-modules:
       Paths_smos_sync_client
@@ -46,7 +45,6 @@ library
     , cookie
     , deepseq
     , dirforest
-    , envparse
     , filelock
     , filepath
     , hostname
@@ -56,7 +54,7 @@ library
     , mergeful
     , monad-logger
     , mtl
-    , optparse-applicative
+    , opt-env-conf
     , path
     , path-io
     , persistent
@@ -67,7 +65,6 @@ library
     , smos-api
     , smos-cli
     , smos-client
-    , smos-data
     , smos-directory
     , text
     , time
