--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -79,14 +79,12 @@ library
     , amazonka
     , amazonka-ses
     , autodocodec
-    , autodocodec-yaml
     , base
     , blaze-html
     , bytestring
     , conduit
     , containers
     , dirforest
-    , envparse
     , filepath
     , http-client
     , http-types
@@ -99,7 +97,7 @@ library
     , monad-logger
     , mtl
     , network-uri
-    , optparse-applicative
+    , opt-env-conf
     , path
     , path-io
     , persistent
