opt-env-conf for smos

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -47,6 +47,7 @@ library:
   - smos-data
   - smos-directory
   - smos-e2e
+  - smos-report
   - smos-sync-client
   - smos-web-assets
   - template-haskell
